--- a/WebApp/src/main/webapp/WEB-INF/web.xml
+++ b/WebApp/src/main/webapp/WEB-INF/web.xml
@@ -2,5 +2,34 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee
                              http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd" version="3.1">
+    <filter>
+        <filter-name>urlFilter</filter-name>
+        <filter-class>ru.itis.javalab.filters.RequestUrlFilter</filter-class>
+    </filter>
+
+    <filter-mapping>
+        <filter-name>urlFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+
+    <filter>
+        <filter-name>headersFilter</filter-name>
+        <filter-class>ru.itis.javalab.filters.RequestHeadersFilter</filter-class>
+    </filter>
+
+    <filter-mapping>
+        <filter-name>headersFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+
+    <filter>
+        <filter-name>authFilter</filter-name>
+        <filter-class>ru.itis.javalab.filters.AuthFilter</filter-class>
+    </filter>
+
+    <filter-mapping>
+        <filter-name>authFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
 
 </web-app>
