--- a/SemesterWork/src/main/resources/application.properties
+++ b/SemesterWork/src/main/resources/application.properties
@@ -15,3 +15,5 @@ mail.smtp.allow8bitmime=true
 mail.smtp.ssl.trust=smtp.gmail.com
 mail.debug=true
 mail.subject=Registration
+
+spring.datasource.initialization-mode=always
