--- a/SemesterWork/src/main/resources/application.properties
+++ b/SemesterWork/src/main/resources/application.properties
@@ -17,3 +17,5 @@ mail.debug=true
 mail.subject=Registration
 
 spring.datasource.initialization-mode=always
+spring.session.jdbc.initialize-schema=always
+spring.session.jdbc.schema=schema-postgresql.sql
