--- a/restful-app/src/main/resources/application.properties
+++ b/restful-app/src/main/resources/application.properties
@@ -5,8 +5,11 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/rest_db
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
+spring.redis.host=127.0.0.1
+spring.redis.port=6379
+
 token.secret=secretword
 token.access.expiration=1800000
 token.refresh.expiration=1800000000
-token.maximum-for-user=3
+token.maximum-for-user=1
 
