--- a/restful-app/src/main/resources/application.properties
+++ b/restful-app/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.redis.host=127.0.0.1
 spring.redis.port=6379
 
 token.secret=secretword
-token.access.expiration=1800000
+token.access.expiration=1800
 token.refresh.expiration=1800000000
 token.maximum-for-user=1
 
